--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -28,4 +28,4 @@ html
             input(class="u-signInput" id="u-signSubmit" value="Login" type="submit")
             
     script(src='/js/user/login.js')
-        
+    gog
