Developed and added new accounttype selector to signup

--- a/public/css/show.main.css
+++ b/public/css/show.main.css
@@ -305,14 +305,14 @@ border-width: 1px 0 0;
                         transition: background-color .5s;
                         float:left;
                         box-sizing: border-box;
-                        background:url(../images/radioCircle.png) center center no-repeat;
+                        background:url(/images/radioCircle.png) center center no-repeat;
                     }
                         .timeSort-ball:hover{
                             background-color:#ecf0f1;
                             transition: background-color .5s;
                         }
                         #timeSort-ball-active{
-                            background:url(../images/whiteDot.png) #ACEAC5 center center no-repeat;
+                            background:url(/images/whiteDot.png) #ACEAC5 center center no-repeat;
                             background-size:100%;
                             transition: background-image 1s;
                         }
