--- a/views/user/signup.jade
+++ b/views/user/signup.jade
@@ -23,6 +23,15 @@ html
             br
             a(class="u-forgotLink" href="/u/login") Already have an account?
             br
+            
+            div(id="accountType-wrap")
+                div(class="aT-selectionCircle" data-accountType="student" id="active-aT-selectionCircle")
+                label(class="aT-selectionLabel") I'm A Student
+                br
+                div(class="aT-selectionConnector")
+                div(class="aT-selectionCircle" data-accountType="faculty")
+                label(class="aT-selectionLabel") I'm Faculty
+            
             br
             br
             input(class="u-signInput" id="u-signSubmit" value="Signup" type="submit")
