--- a/public/css/builder.main.css
+++ b/public/css/builder.main.css
@@ -18,7 +18,7 @@
         float:left;
     }
         #b-crnAddButton{
-            border:1px solid #DDD;
+            border:1px solid #999;
             padding:4px;
             float:right;
             cursor:pointer;
