--- a/public/css/builder.main.css
+++ b/public/css/builder.main.css
@@ -32,6 +32,7 @@
             text-align:left;
             cursor:pointer;
             font-weight:400;
+            font-size:15px;
         }
     #courseBar{
 
