Course thing for create puts overflow of courses on newline

--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -128,7 +128,7 @@ block bodyContent
             div#instantDropDown
             br
             p(style="font-family:Open Sans;font-size:12px;font-weight:100;padding-left:100px;") Your Current Schedule Contains:
-            ul#courseChoiceContainer(style="margin-left:100px;width:100%;float:left;")
+            ul#courseChoiceContainer(style="margin-left:100px;width:550px;padding-right:50px;float:left;")
             br
             button#scheduleCreate(type="submit") Create Schedule
 
