--- a/public/css/builder.main.css
+++ b/public/css/builder.main.css
@@ -30,13 +30,11 @@
             padding:3px;
             padding-left:10px;
             text-align:left;
-            cursor:pointer;
             font-weight:400;
-            font-size:15px;
+            font-size:12px;
+            color:#999;
+            margin-top:10px;
         }
-    #courseBar{
-
-    }
 
 /* schedule box styling */
 .possibleContainer{
