--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -24,5 +24,5 @@ block bodyContent
                 each time, index in ['8:00 am','9:00 am','10:00 am','11:00 am','12:00 am','1:00 pm','2:00 pm','3:00 pm','4:00 pm','5:00 pm','6:00 pm','7:00 pm','8:00 pm','9:00 pm']
                     div(class="b-timeLabel" style="top:"+((index*40)-1)+'px')=time
 
-            div(class="b-timeBlockWrap")
+            div(id="b-timeBlockWrap" class="b-timeBlockWrap")
     script(src="/js/builder.main.js")
