Added faculty email slot, need to finish server validation for that

--- a/views/user/signup.jade
+++ b/views/user/signup.jade
@@ -26,7 +26,7 @@ html
             
             div(id="accountType-wrap")
                 div(class="aT-selectionCircle" data-accountType="student" id="active-aT-selectionCircle")
-                label(class="aT-selectionLabel") I'm A Student
+                label(class="aT-selectionLabel") I'm a Student
                 br
                 div(class="aT-selectionConnector")
                 div(class="aT-selectionCircle" data-accountType="faculty")
@@ -34,6 +34,8 @@ html
             
             br
             br
+            div(id="faculty-email-cover" style="display:none;margin-bottom:10px;")
+                input(class="u-signInput" placeholder="Faculty email, e.g. john.smith@ufv.ca")
             input(class="u-signInput" id="u-signSubmit" value="Signup" type="submit")
             
             
