Added new icons to builder. Changed brightness algorithm, colors now brighter. Show uses minified script now

--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -14,6 +14,8 @@ block bodyContent
             br
     div(id="b-builderWrap" style="float:right;margin-left:-200px;position:absolute;top:123px;left:50%;width:704px;")
         p(style="font-family:Raleway;font-size:20px;text-align:center;font-weight:300;margin-top:0;") Your Schedule
+            img(src="/images/cloudSave.png" height="50px")
+            img(src="/images/cameraWire.png" height="40px")
         input(id="b-crnInput" placeholder="Enter CRNs with a comma inbetween e.g. 10973,10981,10921")
         div(class="b-scheduleWrap" data-crn="" style="float:left;")
             div(class="b-dayLabelWrap")
