Trying to add one click copy. Maybe not a very good idea...

--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -27,4 +27,5 @@ block bodyContent
                     div(class="b-timeLabel" style="top:"+((index*40)-1)+'px')=time
 
             div(id="b-timeBlockWrap" class="b-timeBlockWrap")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.js")
     script(src="/js/builder.main.js")
