--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -12,10 +12,11 @@ block bodyContent
                 span(id="b-crnAddButton") Add +
             br
             br
-    img(src="/images/cloudSave.png" height="50px")
-    img(src="/images/cameraWire.png" height="40px")
     div(id="b-builderWrap" style="float:right;margin-left:-200px;position:absolute;top:123px;left:50%;width:704px;")
         p(style="font-family:Raleway;font-size:20px;text-align:center;font-weight:300;margin-top:0;") Your Schedule
+        div(style="float:right;width:200px;margin-top:-60px;text-align:right;padding-right:20px;")
+            img(src="/images/cloudSave.png" height="45px" style="cursor:pointer;")
+            img(src="/images/cameraWire.png" height="35px" style="margin-left:10px;margin-bottom:4px;cursor:pointer;")
         input(id="b-crnInput" placeholder="Enter CRNs with a comma inbetween e.g. 10973,10981,10921")
         div(class="b-scheduleWrap" data-crn="" style="float:left;")
             div(class="b-dayLabelWrap")
