Changed create js, kills nodes via firstChild method, uses mouseover/out vs css:hover

--- a/views/MainTemplate.jade
+++ b/views/MainTemplate.jade
@@ -12,7 +12,7 @@ html
                 transition:background .25s;
             }
             #homeIconCover:hover{
-                background:#999;
+                background:#34495e;
                 transition:background .25s;
             }
         block headContent
@@ -35,14 +35,14 @@ html
                 #menuContainer
                     #menuNub
                     ul#menuItems-list
-                        a(href="/m/manage" title="Manage Timetable")
+                        a(href="/m" title="Manage Schedule")
                             li.menuItems-listItem.clearfix
                                 img(src="/images/calendarManage.png" height="30px" style="display:inline;float:left;")
-                                span(style="display:inline;padding:5px;margin-left:10px;float:right;") Manage Timetables
-                        a(href="/s/builder" title="Timetable Builder")
+                                span(style="display:inline;padding:5px;margin-left:10px;float:right;") Manage Schedules
+                        a(href="/s/builder" title="Schedule Builder")
                             li.menuItems-listItem.clearfix
                                 img(src="/images/calendarWork.png" height="30px" style="display:inline;float:left;")   
-                                span(style="display:inline;padding:5px;margin-left:10px;float:right;") Timetable Builder
+                                span(style="display:inline;padding:5px;margin-left:10px;float:right;") Schedule Builder
                         //
                             a(href="/directory" title="Course Directory")
                                 li.menuItems-listItem.clearfix
