--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -124,6 +124,11 @@ block headContent
     title="Create Schedule"
 block bodyContent
     section#mainContent
+        #termContainer(style="margin-left:30px;margin-top:100px")
+            #winterIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;")
+                img(src="/images/snowflake.png" width="30px")
+            #summerIcon(style="height:42px;width:42px;padding:5px;box-sizing:border-box;border:1px solid #DDD;float:left;margin-left:2px;opacity:0.4")
+                img(src="/images/sun.png" width="30px")
         #centerContainer
             p#mainTitle Your Courses
             div#courseInput(type="text",contenteditable="true",placeholder="Enter your courses, e.g. Academic Writing, ENGL105")
