Added starring to view, server and client needs to allow this later

--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -80,6 +80,7 @@ block bodyContent
     div(class="possibleContainer" id="scheduleWrapTemplate" )
         //This below is the template for ratings
         div(class="r-ratingWrap")
+            img(src="/images/star.png" style="float: left;height: 20px;margin: 5px;margin-right:10px;margin-left: 0;")
             div(class="r-averageRatingTitle") Average Rating:
             div(class="r-ratingContainer")
             button(data-crn="11257" class="s-useMeButton" title="Use This Schedule") Use This Schedule
