Added conflict display in builder.

--- a/public/css/show.main.css
+++ b/public/css/show.main.css
@@ -360,8 +360,8 @@ border-width: 1px 0 0;
             }
             .customCheckbox-checked{
                 border-color:#3498db;
-                background:url(/images/checkBoxX.png) center center no-repeat;
-                background-size:100%;
+                background:url(/images/checkBoxX.png) #3498db center center no-repeat;
+                background-size:5px 5px;
             }
             
             
