--- a/public/css/builder.main.css
+++ b/public/css/builder.main.css
@@ -89,6 +89,7 @@
             display:inline-block;
         }
             .b-timeBlock{
+                overflow: hidden;
                 position:absolute;
                 background-color:#EEE;
                 width:85px;
@@ -101,6 +102,12 @@
                 border:2px solid rgba(0,0,0,.05);
                 box-sizing: border-box;
                 font-weight:100;
+                -webkit-user-select: none; /* Chrome/Safari */        
+                -moz-user-select: none; /* Firefox */
+                -ms-user-select: none; /* IE10+ */
+
+                -o-user-select: none;
+                user-select: none;
             }
         .b-timeLabelWrap{
             width:86px;
