Can't get backspace to work. Needa develop ajax framework

--- a/views/main/builder.jade
+++ b/views/main/builder.jade
@@ -28,4 +28,6 @@ block bodyContent
                     div(class="b-timeLabel" style="top:"+((index*40)-1)+'px')=time
 
             div(id="b-timeBlockWrap" class="b-timeBlockWrap")
+                div(style="font-family:Open Sans;font-weight:100;font-size:30px;width:200px;position:absolute;left:200px;top:100px;")
+                    | You haven't put it in any CRNs. click the "Add +" button to add your own
     script(src="/js/builder.main.js")
