--- a/public/css/templateCSS.css
+++ b/public/css/templateCSS.css
@@ -63,6 +63,7 @@
                     border:1px solid #DDD;
                     background-color:#FFF;
                     display:none;
+                    z-index: 1000000000000000;
                 }
                 #menuNub{
                     position:absolute;
