--- a/views/MainTemplate.jade
+++ b/views/MainTemplate.jade
@@ -25,7 +25,7 @@ html
                         #logo
                         span(style="height:50px;line-height:50px;font-size:14px;font-family:Open Sans;font-weight:300;color:#444;") Schedular
                 #accountWrap
-                    div#accountName=((firstname+lastname).length===0?student:(firstname+' '+lastname))
+                    div#accountName=username
                     div(style="padding:12px;display:inline-block;")
                         a(title="Home" href="/")
                             div(id="homeIconCover" style="height:26px;width:26px;border:1px solid #CCC;border-radius:25px;overflow:hidden;padding:4px 4px 4px 5px;cursor:pointer;box-sizing:border-box;")
