--- a/views/home.jade
+++ b/views/home.jade
@@ -24,7 +24,7 @@ html
             a(href="/u/signup")
                 button(id="callToAction") Sign Me Up!
         a(href="http://www.facebook.com/schedular")
-            div(style="font-family:Open Sans;color:#9b59b6;font-weight:600;font-size:12px;position:absolute;bottom:0px;left:0px;text-align:center;width:100%;margin-bottom:10px;cursor:pointer") Like us on Facebook!
+            div(style="font-family:Open Sans;color:#2980b9;font-weight:600;font-size:12px;position:absolute;bottom:0px;left:0px;text-align:center;width:100%;margin-bottom:10px;cursor:pointer") Like us on Facebook!
     script.
         var mainContent =   document.getElementById('mainContainer');
         
