--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -26,7 +26,7 @@ block bodyContent
     //  Controls for filtering
     div#c-controlBlock(style="z-index:10;display:table;")
         // Control Course Filter
-        div(id="upperControls")
+        div(id="upperControls" style="margin-bottom:30px")
             div(id="sort-dropDownContainer")
                 div(id="sort-dropDownButton" class="sort-dropDown-active") Sort By 
                     label(style="font-weight:100") | 
@@ -44,14 +44,16 @@ block bodyContent
                     div(class="timeSort-ball" data-value="Noon")
                     div(class="timeSort-connector")
                     div(class="timeSort-ball" data-value="Evenings")
-            div(style="font-family:Open Sans;font-size:12px;font-weight:100;float:right;")        
-                div(style="height:20px;width:20px;border-radius:20px;border:1px solid #DDD;float:right;margin-top:20px;display:inline-block;position:absolute;right:0px;") 
-                span(style="float:right;display:inline-block;position:absolute;right:30px;top:30px") Advanced
+            div(id="advancedButton" style="border-radius:10px;margin-top:20px;border:1px solid #DDD;padding:5px 5px 5px 10px;cursor:pointer;font-family:Open Sans;font-size:12px;font-weight:100;float:right;")        
+                div(style="background:url(/images/downArrow.png) center center no-repeat;background-size:50%;height:20px;width:20px;border-radius:20px;border:1px solid #DDD;float:right;") 
+                span(style="float:left;margin-right:20px;margin-top:3px;") Advanced
         
         
         //Filter by Campus
-        div(id="lowerControls" style="margin-top:60px;float:right;")
-            table(id="campusList" style="float:right;")
+        br
+        br
+        div(id="lowerControls" style="float:right;display:none;width:100%;background-color:#fdfdfd;border:1px solid #DDD;height:100px")
+            table(id="campusList" style="float:right;margin-top:25px;margin-right:20px;")
                 tr
                     td(class="campusFilter-box") Abby
                     td(class="campusFilter-box") Chilliwack
