Yea, changing the over design style

--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -44,15 +44,16 @@ block bodyContent
                     div(class="timeSort-ball" data-value="Noon")
                     div(class="timeSort-connector")
                     div(class="timeSort-ball" data-value="Evenings")
-            div(id="advancedButton" style="border-radius:10px;margin-top:20px;border:1px solid #DDD;padding:5px 5px 5px 10px;cursor:pointer;font-family:Open Sans;font-size:12px;font-weight:100;float:right;")        
-                div(style="background:url(/images/downArrow.png) center center no-repeat;background-size:50%;height:20px;width:20px;border-radius:20px;border:1px solid #DDD;float:right;") 
-                span(style="float:left;margin-right:20px;margin-top:3px;") Advanced
+            div(id="advancedButton" style="padding:5px;border-radius:20px;margin-top:20px;background-color:#9b59b6;color:#FFF;cursor:pointer;font-family:Open Sans;font-size:12px;font-weight:100;float:right;")        
+                div(style="margin-right:0px;background:url(/images/downArrow.png) #FFF center center no-repeat;background-size:50%;height:20px;width:20px;border-radius:20px;float:right;") 
+                span(style="font-weight:400;float:left;margin-right:20px;margin-top:1px;margin-left:10px;") Advanced
         
         
         //Filter by Campus
         br
         br
-        div(id="lowerControls" style="float:right;display:none;width:100%;background-color:#fdfdfd;border:1px solid #DDD;height:100px")
+        div(id="lowerControls" style="float:right;display:none;width:100%;background-color:#fff;border-top:1px solid #DDD;height:100px")
+            // div(style="height:80%;width:10px;border:1px solid rgba(0,0,0,0.1);margin-left:10px;margin-to:10px;border-radius:10px;")
             table(id="campusList" style="float:right;margin-top:25px;margin-right:20px;")
                 tr
                     td(class="campusFilter-box") Abby
