--- a/public/css/show.main.css
+++ b/public/css/show.main.css
@@ -85,13 +85,13 @@ border-width: 1px 0 0;
                 position:absolute;
                 background-color:#EEE;
                 width:70px;
-                font-size:12px;
+                font-size:11px;
                 text-align:center;
                 font-family:Open Sans;
                 color:#000;
                 cursor:pointer;
                 border-radius:3px;
-                border:2px solid rgba(0,0,0,.05);
+                border:1px solid rgba(0,0,0,.05);
                 box-sizing: border-box;
                 font-weight:100;
             }
@@ -320,10 +320,10 @@ border-width: 1px 0 0;
                     .timeSort-connector{
                         float:left;
                         width:50px;
-                        height:2px;
-                        border-top:1px solid #BBB;
-                        border-bottom:1px solid #BBB;
-                        margin-top:8px;
+                        height:4px;
+                        border-top:1px solid #DDD;
+                        border-bottom:1px solid #DDD;
+                        margin-top:7px;
                     }
                 #timeSort-upper{
                     height:12px;
@@ -358,11 +358,14 @@ border-width: 1px 0 0;
 
                 -o-user-select: none;
                 user-select: none;
+                transition:border-radius .5s;
             }
             .customCheckbox-checked{
                 border-color:#27ae60;
                 background:url(/images/checkBoxX.png) #2ecc71 center center no-repeat;
-                background-size:5px 5px;
+                background-size:60%;
+                border-radius:100px;
+                transition:border-radius .5s;
             }
             
             
